# DashBoard_clone

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  Check.md  Dockerfile  GEMINI.md  PRD.md  README.md  README.mdj  SDD.md  TDD.md  agent.md  agents.md  claude.md  docker-compose.prd.yml  docker-compose.test.yml  docker-compose.yml  environment.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  supervisord.conf  ts-migration-plan.md
.cdd/: acceptance-lock.json  approval-policy.yml  asset-manifest.json  boundary-manifest.yml  code-map.yml  conformance.json  design-lock.json  model-policy.json  policy.yml
.claude/: settings.json
apps/: portal.py  table_data_viewer.py  wip_report.py  快速啟動.py
ci/: playwright-nightly.md
contract/: api_development_contract.md  api_inventory.md  api_refactoring_plan.md  css_development_contract.md  css_inventory.md
contracts/: CHANGELOG.md  openapi.json
data/: modernization_feature_flags.json  page_status.json  table_schema_info.json
deploy/: mes-dashboard-downtime-worker.service  mes-dashboard-eap-alarm-worker.service  mes-dashboard-hold-history-worker.service  mes-dashboard-material-consumption-worker.service  mes-dashboard-msd-worker.service  mes-dashboard-production-achievement-worker.service  mes-dashboard-production-history-worker.service  mes-dashboard-reject-worker.service  mes-dashboard-trace-worker.service  mes-dashboard-uph-performance-worker.service  mes-dashboard-watchdog.service  mes-dashboard-wip-worker.service  mes-dashboard.env.example  mes-dashboard.service
docs/: DW_PJ_LOT_V_POWERBI_SQL.txt  MES_Core_Tables_Analysis_Report.md  MES_Database_Reference.md  Oracle_Authorized_Objects.md  System_Architecture_Design.md  WIP報表說明.md  architecture_findings.md  cache-strategy.md  cdd-kit-patterns.md  ci_real_infra_gate_policy.md  dynamic-rq-migration-plan.md  env_sync_report.md  env_usage_gap_report.md  environment_gaps_and_mitigation.md  frontend_compute_shift_plan.md  hold_history.md  migration_gates_and_runbook.md  migration_validation_evidence.md  oom_agent_work_plan.md  oom_cache_cross_apply_analysis.md  page_architecture_map.md  page_query_architecture_audit_and_ram_phase_plan.md  real_infra_stability_report.md  reject_history_performance.md  reject_history_performance.sql  root_cutover_inventory.md  root_refactor_validation_notes.md  使用說明.md  開始使用.txt
frontend/: .gitignore  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js
frontend_design/: Hold_detail.pen  WIP_main.pen
openspec/: openapi.yaml
scripts/: 0_初始化環境.bat  capture_spool_snapshot.py  check_full_modernization_gates.py  deploy.sh  extract_sql_schema.py  generate_portal_migration_baseline.py  generate_portal_shell_route_view_baseline.py  init_mysql.py  measure_real_infra_stability.py  migrate_sqlite_to_mysql.py  reap_orphan_jobs.py  record_portal_performance_baseline.py  run_cache_benchmarks.py  run_e2e.sh  run_stress_tests.py  soak_local.sh  sql_opt_test_cases.py  start_server.sh  (+5 more)
(+5066 files in other folders)
